# antimony

./: .gitignore  Antimony.cpp  Antimony.sln  Antimony.vcproj  CMakeLists.txt  LICENSE.txt  Makefile  README.txt  SimpleAntimonyAPI.cpp  all.pro  antimony.pro  antimony.tab.cpp  antimony.ypp  antimony2cellml.pro  antimony2sbml.pro  antimony_api.cpp  antimony_api.h  azure-pipelines.yml  buildAll.bat  buildall.sh  common.cmake  common.pri  dnastrand.cpp  dnastrand.h  documentation.txt  event.cpp  event.h  formula.cpp  formula.h  makeAll.bat  module.cpp  module.h  rd_type.cpp  rd_type.h  reactantlist.cpp  reactantlist.h  reaction.cpp  reaction.h  registry.cpp  registry.h  (+9 more)
antimony/: .gitignore  Antimony.sln  Antimony.vcproj  CMakeLists.txt  Makefile  README.txt  all.pro  antimony-vs2003.sln  antimony.pro  antimony.tab.cpp  antimony.ypp  antimony2sbml.pro  antimony_api.cpp  antimony_api.h  buildall.sh  common.pri  dnastrand.cpp  documentation.txt  event.cpp  event.h  formula.cpp  formula.h  libutil.h  module.cpp  module.h  rd_type.cpp  rd_type.h  reactantlist.cpp  reactantlist.h  reaction.cpp  reaction.h  registry.cpp  registry.h  sbml2antimony.pro  sbmlx.cpp  sbmlx.h  simpleantimonyapi.cpp  simpleantimonyapi.h  stringx.cpp  stringx.h  (+2 more)
antimony/Antimony_Translator/: AntimonyTab.cpp  AntimonyTab.h  Makefile  Makefile.Debug  Makefile.Release  TabManager.h  Translator.h
antimony/Antimony_Translator/debug/: moc_ChangeableTextBox.cpp  moc_TabManager.cpp  moc_Translator.cpp  moc_mainwindow.cpp
antimony/Antimony_Translator/qtc-gdbmacros/: Makefile.Debug
antimony/ConsoleApplication1/: ConsoleApplication1.csproj  Program.cs
antimony/ConsoleApplication1/Properties/: AssemblyInfo.cs
antimony/QTAntimony/: AntimonyTab.cpp  ChangeableTextBox.cpp  ChangeableTextBox.h  FileWatcher.cpp  QTAntimony.cpp  QTAntimony.h  QTAntimony.pro  README.txt  SBMLTab.cpp  SBWIntegration.cpp  Settings.h  TabManager.cpp  TabManager.h  Translator.cpp  Translator.h  Tutorial.cpp  Tutorial.html  Tutorial.xxd  main.cpp
antimony/QTAntimony/debug/: moc_AntimonyTab.cpp  moc_ChangeableTextBox.cpp  moc_SBMLTab.cpp  moc_Translator.cpp  moc_mainwindow.cpp
antimony/QTAntimony/qtc-gdbmacros/: Makefile  Makefile.Debug  Makefile.Release
antimony/QTAntimony_src/: AntimonyTab.cpp  CellMLTab.cpp  ChangeableTextBox.cpp  CopyMessageBox.cpp  FileWatcher.h  GoToLineDialog.cpp  GoToLineDialog.h  GoToLineDialog.ui  GoToLineForm.cpp  GoToLineForm.ui  LineNumberArea.h  QTAntimony.cpp  README.txt  SBMLTab.cpp  SBMLTab.h  SBWIntegration.cpp  SBWIntegration.h  TabManager.cpp  TabManager.h  Translator.cpp  Translator.h  Tutorial.cpp  Tutorial.html  Tutorial.xxd  antimony.qrc  antimonyicon.rc  main.cpp  resource.h
antimony/QtAntimonyBuild/: QtAntimonyBuild.pro
antimony/antimony2cellml/: antimony2cellml.pro  antimony2cellml.vcproj
antimony/antimony2sbml/: antimony2sbml.pro  antimony2sbml.vcproj
antimony/doc/: AntimonyDocumentation.htm  AntimonyTutorial.htm  Tutorial.odt  antimony-biomodels.txt  antimony-cellml.txt  antimony-examples.txt  antimony-installation.txt  antimony-license.txt  antimony-mainpage.txt  antimony-qt.txt  antimony-technical-spec.txt  antimony-why.txt  doxygen.antimony.cfg  google-analytics.html  technical_spec.html
antimony/doc/examples/: ex_antimony_input.txt  ex_antimony_output.txt  ex_sbml_output_ffn_sbml.xml  ex_sbml_output_ringoscil_sbml.xml
antimony/examples/: ex_sbml_output_ffn_sbml.xml
antimony/examples/biomodels/: BIOMD0000000001.txt  BIOMD0000000002.txt  BIOMD0000000005.txt  BIOMD0000000008.txt  BIOMD0000000012.txt  BIOMD0000000013.txt  BIOMD0000000014.txt  BIOMD0000000016.txt  BIOMD0000000019.txt  BIOMD0000000027.txt  BIOMD0000000028.txt  BIOMD0000000030.txt  BIOMD0000000032.txt  BIOMD0000000034.txt  BIOMD0000000043.txt  BIOMD0000000047.txt  BIOMD0000000052.txt  BIOMD0000000054.txt  BIOMD0000000055.txt  BIOMD0000000056.txt  BIOMD0000000057.txt  BIOMD0000000059.txt  BIOMD0000000060.txt  BIOMD0000000062.txt  BIOMD0000000064.txt  BIOMD0000000065.txt  BIOMD0000000068.txt  BIOMD0000000069.txt  BIOMD0000000072.txt  BIOMD0000000088.txt  BIOMD0000000089.txt  BIOMD0000000092.txt  BIOMD0000000098.txt  BIOMD0000000104.txt  BIOMD0000000107.txt  BIOMD0000000112.txt  BIOMD0000000119.txt  BIOMD0000000127.txt  BIOMD0000000129.txt  BIOMD0000000137.txt  (+18 more)
antimony/libantimony/: QMakeFile  libantimony.pro
antimony/sbml2antimony/: QMakeFile  sbml2antimony.pro  sbml2antimony.vcproj
antimony/src/: annotated.cpp  annotated.h  antimony.tab.cpp  antimony.ypp  antimony2cellml.cpp  antimony2sbml.cpp  antimony_api.cpp  antimony_api.h  antimony_api_cpp.cpp  antimony_api_cpp.h  cellml2antimony.cpp  cellmlx.cpp  cellmlx.h  constraint.h  dnastrand.cpp  dnastrand.h  enums.h  event.cpp  event.h  formula.cpp  formula.h  libutil.h  module-cellml.cpp  module-sbml.cpp  module.cpp  module.h  rd_type.cpp  reactantlist.cpp  reactantlist.h  reaction.cpp  reaction.h  registry.cpp  registry.h  rehashantimony.cpp  sbml2antimony.cpp  sbmlx.cpp  sbmlx.h  sboTermWrapper.cpp  sboTermWrapper.h  sbtranslate.cpp  (+18 more)
antimony/src/bindings/: CMakeLists.txt
antimony/src/test/: CMakeLists.txt  TestAntimonyAPI.c  TestAntimonyBasic.c  TestAntimonyCVTerms.c  TestAntimonyConstraints.c  TestAntimonyDistrib.c  TestAntimonyErrors.c  TestAntimonyFBC.c  TestAntimonyFlattening.c  TestAntimonyHierarchy.c  TestAntimonySBO.c  TestAntimonyUncert.c  TestRunner.c
antimony/testdir/: delete_test.txt  exchangetest.txt
antimony/testdir/from-comp/: CompTest_flat.txt  QTPop.txt  complexified.txt  complexified2.txt  complexified_flat.txt  doubleext2.txt  doubleext2_flat.txt  doubleext_flat.txt  dropports.txt  dropports_flat.txt  eg-replacement.txt  eg-replacement_flat.txt  eg-simple-aggregate_flat.txt  exchangetest2.txt  exchangetest2_flat.txt  exchangetest_flat.txt  identical_flat.txt  run_test.txt  test1.txt  (+43 more)
antimony/testmodels/: model1.txt  model2.txt  test.txt  test2.txt
antimony/win32/: Antimony Python bindings.iss  AntimonyPythonBindings.iss  README.txt  antimony.exp  antimony.lib  antimonyInstaller.iss  installAntimony.iss
src/bindings/: CMakeLists.txt
(+5720 files in other folders)
